create custom functions py file

--- a/core-lstm-gru.ipynb
+++ b/core-lstm-gru.ipynb
@@ -10,17 +10,17 @@
     "\n",
     "Define a function to build and compile a simple LSTM model\n",
     "\n",
-    "Use the pre-trained text vectorization layer from the practice assignment\n",
+    "    - Use the pre-trained text vectorization layer from the practice assignment\n",
     "\n",
-    "Create an embedding layer with output_dim =150\n",
+    "    - Create an embedding layer with output_dim =150\n",
     "\n",
-    "Add an LSTM layer with 128 units\n",
+    "    - Add an LSTM layer with 128 units\n",
     "\n",
-    "Add an appropriate output layer\n",
+    "    - Add an appropriate output layer\n",
     "\n",
-    "Compile the model with the adam optimizer, loss = \"sparse_categorical_corssentropy\" and metrics = \"accuracy\"\n",
+    "    - Compile the model with the adam optimizer, loss = \"sparse_categorical_corssentropy\" and metrics = \"accuracy\"\n",
     "\n",
-    "Include an early stopping callback with a patience of 3\n",
+    "    - Include an early stopping callback with a patience of 3\n",
     "\n",
     "Build, Fit, and Evaluate the model\n",
     "\n",
@@ -1815,7 +1815,42 @@
    "id": "b90c5409-36b9-4e9b-bb6d-732ea34e7ea5",
    "metadata": {},
    "source": [
-    "### Define a function to build and compile a simple LSTM model"
+    "### Define a function to build and compile a simple LSTM model\n",
+    "\n",
+    "    - Use the pre-trained text vectorization layer from the practice assignment\n",
+    "\n",
+    "    - Create an embedding layer with output_dim =150\n",
+    "\n",
+    "    - Add an LSTM layer with 128 units\n",
+    "\n",
+    "    - Add an appropriate output layer\n",
+    "\n",
+    "    - Compile the model with the adam optimizer, loss = \"sparse_categorical_corssentropy\" and metrics = \"accuracy\"\n",
+    "\n",
+    "    - Include an early stopping callback with a patience of 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "38fbde2b-d858-4a65-9217-e27fc5c7a0cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define output dimension\n",
+    "EMBED_DIM = 150\n",
+    "EMBED_DIM"
    ]
   },
   {
@@ -1853,27 +1888,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3d313127-4931-4712-a540-ebdb958cf708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Include callbacks\n",
+    "def get_callbacks(patience=3, monitor='val_accuracy'):\n",
+    "    early_stop = tf.keras.callbacks.EarlyStopping(patience=patience, monitor=monitor)\n",
+    "    return [early_stop]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d636e4fc-c59e-4d9e-b64b-2ce487bd873c",
+   "id": "f9cf5075-e00e-469c-a25d-d94b1cc0791b",
    "metadata": {},
    "source": [
-    "### Use the pre-trained text vectorization layer from the practice assignment"
+    "## Build, Fit, and Evaluate the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d8bcb8c8-feb1-4c1b-bf5e-ec445ec0fbbc",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "084b1799-cd50-4bf2-99b2-b3418f3498e2",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " text_vectorization (TextVec  (None, 100)              0         \n",
+      " torization)                                                     \n",
+      "                                                                 \n",
+      " embedding_3 (Embedding)     (None, 100, 150)          3146400   \n",
+      "                                                                 \n",
+      " lstm_3 (LSTM)               (None, 128)               142848    \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 3)                 387       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 3,289,635\n",
+      "Trainable params: 3,289,635\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/30\n",
+      "370/370 [==============================] - 56s 144ms/step - loss: 1.0980 - accuracy: 0.3661 - val_loss: 0.9621 - val_accuracy: 0.4963\n",
+      "Epoch 2/30\n",
+      "370/370 [==============================] - 49s 133ms/step - loss: 0.8638 - accuracy: 0.5956 - val_loss: 0.8273 - val_accuracy: 0.6575\n",
+      "Epoch 3/30\n",
+      "370/370 [==============================] - 45s 121ms/step - loss: 0.6343 - accuracy: 0.7480 - val_loss: 0.8194 - val_accuracy: 0.6930\n",
+      "Epoch 4/30\n",
+      "370/370 [==============================] - 41s 111ms/step - loss: 0.4790 - accuracy: 0.8223 - val_loss: 0.8273 - val_accuracy: 0.6909\n",
+      "Epoch 5/30\n",
+      "370/370 [==============================] - 36s 97ms/step - loss: 0.3788 - accuracy: 0.8614 - val_loss: 0.7990 - val_accuracy: 0.7190\n",
+      "Epoch 6/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.3125 - accuracy: 0.8887 - val_loss: 0.8498 - val_accuracy: 0.7229\n",
+      "Epoch 7/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.2618 - accuracy: 0.9082 - val_loss: 0.8573 - val_accuracy: 0.7267\n",
+      "Epoch 8/30\n",
+      "370/370 [==============================] - 35s 95ms/step - loss: 0.2314 - accuracy: 0.9184 - val_loss: 0.9084 - val_accuracy: 0.7158\n",
+      "Epoch 9/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.2039 - accuracy: 0.9269 - val_loss: 0.8988 - val_accuracy: 0.7285\n",
+      "Epoch 10/30\n",
+      "370/370 [==============================] - 35s 93ms/step - loss: 0.1806 - accuracy: 0.9370 - val_loss: 0.9110 - val_accuracy: 0.7303\n",
+      "Epoch 11/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.1674 - accuracy: 0.9418 - val_loss: 0.8537 - val_accuracy: 0.7306\n",
+      "Epoch 12/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.1477 - accuracy: 0.9496 - val_loss: 0.9644 - val_accuracy: 0.7374\n",
+      "Epoch 13/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.1439 - accuracy: 0.9516 - val_loss: 0.9403 - val_accuracy: 0.7359\n",
+      "Epoch 14/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.1364 - accuracy: 0.9544 - val_loss: 1.0121 - val_accuracy: 0.7311\n",
+      "Epoch 15/30\n",
+      "370/370 [==============================] - 35s 94ms/step - loss: 0.1326 - accuracy: 0.9545 - val_loss: 1.0675 - val_accuracy: 0.7362\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'fn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 13\u001b[0m\n\u001b[0;32m      6\u001b[0m history \u001b[38;5;241m=\u001b[39m lstm_model\u001b[38;5;241m.\u001b[39mfit(\n\u001b[0;32m      7\u001b[0m     train_ds,\n\u001b[0;32m      8\u001b[0m     epochs\u001b[38;5;241m=\u001b[39mEPOCHS,\n\u001b[0;32m      9\u001b[0m     validation_data\u001b[38;5;241m=\u001b[39mval_ds,\n\u001b[0;32m     10\u001b[0m     callbacks\u001b[38;5;241m=\u001b[39mget_callbacks(),\n\u001b[0;32m     11\u001b[0m )\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Obtain the results\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[38;5;241m.\u001b[39mevaluate_classification_network(\n\u001b[0;32m     14\u001b[0m     lstm_model, X_train\u001b[38;5;241m=\u001b[39mtrain_ds, \n\u001b[0;32m     15\u001b[0m     X_test\u001b[38;5;241m=\u001b[39mtest_ds, history\u001b[38;5;241m=\u001b[39mhistory\n\u001b[0;32m     16\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'fn' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "### Create an embedding layer with output_dim =150"
+    "# Build the lstm model and specify the vectorizer\n",
+    "lstm_model = build_lstm_model(sequence_vectorizer)\n",
+    "# Defien number of epocs\n",
+    "EPOCHS = 30\n",
+    "# Fit the model\n",
+    "history = lstm_model.fit(\n",
+    "    train_ds,\n",
+    "    epochs=EPOCHS,\n",
+    "    validation_data=val_ds,\n",
+    "    callbacks=get_callbacks(),\n",
+    ")\n",
+    "# Obtain the results\n",
+    "results = fn.evaluate_classification_network(\n",
+    "    lstm_model, X_train=train_ds, \n",
+    "    X_test=test_ds, history=history\n",
+    ");"
    ]
   },
   {
@@ -1885,28 +2008,12 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "679e1568-8b31-4d94-9e0d-884775b21be2",
-   "metadata": {},
-   "source": [
-    "### Add an LSTM layer with 128 units"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "815acfe1-acf2-48f8-9c77-9a1f6189c0ca",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8ab68a5e-9d4c-4ae9-bb0c-1e1132736d0e",
-   "metadata": {},
-   "source": [
-    "### Add an appropriate output layer"
-   ]
   },
   {
    "cell_type": "code",
@@ -1917,14 +2024,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "5bfbc9ba-5748-4b08-b5d6-0e4a7935ddcb",
-   "metadata": {},
-   "source": [
-    "### Compile the model with the adam optimizer, loss = \"sparse_categorical_corssentropy\" and metrics = \"accuracy\""
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "84b8d052-d0be-49da-a365-f78d3bc37158",
@@ -1933,28 +2032,12 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "f4110775-22e5-4888-9113-ae7f83eca28b",
-   "metadata": {},
-   "source": [
-    "### Include an early stopping callback with a patience of 3"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "527af266-4896-4bb4-ba9f-95d6e38f1402",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9cf5075-e00e-469c-a25d-d94b1cc0791b",
-   "metadata": {},
-   "source": [
-    "## Build, Fit, and Evaluate the model"
-   ]
   },
   {
    "cell_type": "code",
