add functions to py file

--- a/core-lstm-gru.ipynb
+++ b/core-lstm-gru.ipynb
@@ -43,6 +43,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "1fd144fd-62ed-4e0f-83cc-512fba955069",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import custom_functions as fn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "1cc0758f-b0fd-4167-8b7a-3dc05b9f85cc",
    "metadata": {},
