--- a/core-text-classification-rnn.ipynb
+++ b/core-text-classification-rnn.ipynb
@@ -2,35 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2a3728de-9295-4b1d-afe2-10f1c8cdf975",
-   "metadata": {},
-   "source": [
-    "<table style=\"background-color: rgb(13,32,76); border-radius: 10px\">\r\n",
-    "\t<thead>\r\n",
-    "\t\t<tr>\r\n",
-    "\t\t\t<th colspan=\"2\" style=\"border: hidden; vertical-align: top;\" width=\"15%\"><img src=\"https://assets.codingdojo.com/boomyeah2015/codingdojo/curriculum/content/chapter/1674755226__Icons_400px_Practice Assignment.png\">\r\n",
-    "\t\t\t</th>\r\n",
-    "\t\t\t<th style=\"border: hidden;\">\r\n",
-    "\t\t\t\t<h1 style=\"color: white;\">Vectorization Layer (Practice)</h1>\r\n",
-    "\t\t\t</th>\r\n",
-    "\t\t</tr>\r\n",
-    "\t</thead>\r\n",
-    "</table>\r\n",
-    "<p>This practice assignment will reinforce important learning objectives from the previous lesson(s), and allow you to take on more challenging core assignments, preparing you for graduation.<br></p>\r\n",
-    "<p>Practice and tinker with this assignment until you're comfortable performing each of the tasks. Then, be sure to submit your output as described in the steps below.</p>\r\n",
-    "<hr>\r\n",
-    "<h2><span style=\"background-color: initial; font-family: Gotham-Rounded-Bold; font-size: 24px;\">Vectorization Layer (Practice)</span></h2>\r\n",
-    "<p><br></p>\r\n",
-    "<p>Use the following <a href=\"https://drive.google.com/file/d/1uUtuiAM1AqGvDMrd3-L8vLFfHPrt3pWG/view?usp=sharing\" target=\"_blank\">dataset</a> to train your vectorization layer.  This is the \"spooky\" dataset and represents passages from three famous authors: Edgar Allan Poe, HP Lovecraft, and Mary Shelley. The ultimate goal is a multi-class text classification matching each passage to the correct author.</p>\r\n",
-    "<ul><li>Prepare the dataset:<ul><li>Load in the dataset with 'id\" as the index column</li><li>Determine the sequence length of each document in the corpus by using a lambda function to split the text on the spaces<ul><li>What is the range of sequence lengths?</li><li>What is the average sequence length?</li></ul></li><li>Use the RandomUnderSampler to balance the data based on the \"author\" column.</li><li>Change the author strings to integers using the following mapping:<ul><li>EAP: 0</li></ul><ul><li>HPL: 1</li></ul><ul><li>MWS: 2</li></ul></li><li>Define X as the values from the \"text\" column.</li><li>Define y as the \"author\" column.</li><li>Convert to a dataset object using Dataset.from_tensor_slices()</li><li>Train, test, split with a .7, .2, .1 ratio using the take, skip, approach</li></ul></li></ul>\r\n",
-    "<ul><li>Build a text vectorization layer to create integer sequences of each text.<ul><li>Use an output sequence length of 100</li><li>Use a standardization method of \"lower_and_strip_punctuation\"</li></ul></li><li>Obtain the text from the training dataset using a lambda function</li><li>Train (adapt) the vectorization layer on the text data</li><li>What is the size of the vocabulary?</li><li>Create a look-up dictionary that will allow you to look up the word associated with an integer.<ul><li>What word is associated with integer 1000?</li></ul></li><li>Obtain the vectorized result of the sample text: \"Text Vectorization is an essential tool for converting text into a format that machine learning models can use.\"</li></ul>\r\n",
-    "<p><br></p>\r\n",
-    "<p>Solution</p>\r\n",
-    "<p><br></p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "53e7a0a3-fc17-4032-81ff-95355a9ad601",
    "metadata": {},
    "source": [
@@ -72,6 +43,19 @@
     "from sklearn.pipeline import make_pipeline, Pipeline\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from imblearn.under_sampling import RandomUnderSampler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32933126-3612-4834-ab9d-5618e57c3347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import custom_functions as fn"
    ]
   },
   {
@@ -1805,6 +1789,250 @@
     "sequence= sequence_vectorizer(['Text Vectorization is an essential tool for converting text into a format that machine learning models can use.'])\n",
     "sequence"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "882aeaea-b8c9-475e-b22c-ed278ce91637",
+   "metadata": {},
+   "source": [
+    "# Core: Text Classification with RNNs\n",
+    "\n",
+    "Now, you will try to improve the performance of the RNN model.\n",
+    "\n",
+    "You will build, fit, and evaluate at least 3 models using architecture or techniques you have learned in the course. Consider stacked RNNs, bi-directional RNNs, pre-trained word embeddings, pooling layers, dropout layers, and tuning of hyperparameters. Your goal should be to achieve the highest accuracy possible. An accuracy score above 80% is achievable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "136693d2-8f0f-405d-aaf4-21676184f5f5",
+   "metadata": {},
+   "source": [
+    "## Model 1: Stacked RNNs (Stacked GRU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "68fa610e-7a00-4163-9c23-6a494616890c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import packages\n",
+    "\n",
+    "from tensorflow.keras import layers, optimizers, regularizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4c7d25fb-80d3-4210-a001-83ab415e0807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import function\n",
+    "def build_gru_model_stack_deep_pool(text_vectorization_layer):\n",
+    "    \n",
+    "    \n",
+    "    MAX_TOKENS = text_vectorization_layer.vocabulary_size()\n",
+    "        \n",
+    "    model = tf.keras.Sequential([\n",
+    "        text_vectorization_layer,\n",
+    "        layers.Embedding(input_dim=VOCAB_SIZE,\n",
+    "                                  output_dim=EMBED_DIM, \n",
+    "                                  input_length=SEQUENCE_LENGTH)])\n",
+    "\n",
+    "    # Stack three GrU layers    \n",
+    "    model.add(layers.GRU(128, return_sequences=True))\n",
+    "    model.add(layers.Dropout(.5))\n",
+    "    model.add(layers.GRU(128, return_sequences=True))\n",
+    "    model.add(layers.Dropout(.5))         \n",
+    "    # For the final GRU layer, use return_sequences = True for pooling layer\n",
+    "    model.add(layers.GRU(128, return_sequences = True)) \n",
+    "    model.add(layers.GlobalMaxPooling1D())\n",
+    "    # Output layer\n",
+    "    model.add(layers.Dense(len(classes), \n",
+    "                              activation='softmax'))\n",
+    "\n",
+    "              \n",
+    "    # Define optimizer\n",
+    "    optimizer = optimizers.legacy.Adam()\n",
+    "\n",
+    "    # Compile\n",
+    "    model.compile(optimizer=optimizer,  \n",
+    "                  loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "    model.summary()\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9f8388de-254b-40ee-9785-0009960cf9d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# include callbacks\n",
+    "\n",
+    "def get_callbacks(patience=3, monitor='val_accuracy'):\n",
+    "    early_stop = tf.keras.callbacks.EarlyStopping(patience=patience, monitor=monitor)\n",
+    "    return [early_stop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "92509080-23a2-4af2-aca1-3b19a052a00a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EMBED_DIM = 150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29540b8b-104e-4210-8ca3-dfe9d465c8f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " text_vectorization (TextVec  (None, 100)              0         \n",
+      " torization)                                                     \n",
+      "                                                                 \n",
+      " embedding (Embedding)       (None, 100, 150)          3146400   \n",
+      "                                                                 \n",
+      " gru (GRU)                   (None, 100, 128)          107520    \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 100, 128)          0         \n",
+      "                                                                 \n",
+      " gru_1 (GRU)                 (None, 100, 128)          99072     \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 100, 128)          0         \n",
+      "                                                                 \n",
+      " gru_2 (GRU)                 (None, 100, 128)          99072     \n",
+      "                                                                 \n",
+      " global_max_pooling1d (Globa  (None, 128)              0         \n",
+      " lMaxPooling1D)                                                  \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 3)                 387       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 3,452,451\n",
+      "Trainable params: 3,452,451\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/30\n",
+      "370/370 [==============================] - 95s 243ms/step - loss: 0.7619 - accuracy: 0.6409 - val_loss: 0.5099 - val_accuracy: 0.7980\n",
+      "Epoch 2/30\n",
+      "191/370 [==============>...............] - ETA: 39s - loss: 0.3575 - accuracy: 0.8645"
+     ]
+    }
+   ],
+   "source": [
+    "# build, fit, evaluate\n",
+    "\n",
+    "model = build_gru_model_stack_deep_pool(sequence_vectorizer)\n",
+    "\n",
+    "EPOCHS = 30\n",
+    "history = model.fit(\n",
+    "    train_ds,\n",
+    "    epochs=EPOCHS,\n",
+    "    validation_data=val_ds,\n",
+    "    callbacks=get_callbacks(),\n",
+    ")\n",
+    "results = evaluate_classification_network(\n",
+    "    model,\n",
+    "    X_test=test_ds, history=history\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee0f603-738d-4fe3-8063-694ab81ae3ba",
+   "metadata": {},
+   "source": [
+    "## Model 2: Bi-Directional RNNs (GRU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a8ee124-0a79-45b7-896f-537254736dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import function\n",
+    "\n",
+    "def build_gru_model_bi_pool(text_vectorization_layer):\n",
+    "    \n",
+    "    gru_model_bi_pool = Sequential([\n",
+    "        text_vectorization_layer,\n",
+    "        layers.Embedding(input_dim=VOCAB_SIZE,\n",
+    "                      output_dim=EMBED_DIM,\n",
+    "                      input_length=SEQUENCE_LENGTH)])\n",
+    "        \n",
+    "    # Add bidirectional component to GRU layer \n",
+    "    gru_model_bi_pool.add(layers.Bidirectional(layers.GRU(128, return_sequences = True)))\n",
+    "    \n",
+    "    # Add a pooling layer *new\n",
+    "    gru_model_bi_pool.add(layers.GlobalMaxPooling1D())\n",
+    "    \n",
+    "    # Output layer\n",
+    "    gru_model_bi_pool.add(layers.Dense(len(classes), activation='softmax'))\n",
+    "                     \n",
+    "    optimizer = optimizers.legacy.Adam()\n",
+    "    gru_model_bi_pool.compile(optimizer=optimizer, \n",
+    "                  loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "    gru_model_bi_pool.summary()\n",
+    "    return gru_model_bi_pool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5382ca-1cad-4ea6-ae05-efd0d771fd98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "​# Build the model\n",
+    "model = build_gru_model_bi_pool(sequence_vectorizer)\n",
+    "\n",
+    "# Fit the model\n",
+    "EPOCHS = 30\n",
+    "history = model.fit(\n",
+    "    train_ds,\n",
+    "    epochs=EPOCHS,\n",
+    "    validation_data=val_ds,\n",
+    "    callbacks=get_callbacks(),\n",
+    ")\n",
+    "\n",
+    "# Evaluate the model\n",
+    "results = fn.evaluate_classification_network(\n",
+    "    model, X_train=train_ds, \n",
+    "    X_test=test_ds, history=history);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2bff9a0-9021-4f4b-bdd2-5f038627c885",
+   "metadata": {},
+   "source": [
+    "## Model 3: Pre-Trained Word Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c74d64e-7900-427f-b46b-adc0d666ceeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
